Fixed issue #7076: Missing translation and wrong truncating

--- a/styles/gringegreen/adminstyle.css
+++ b/styles/gringegreen/adminstyle.css
@@ -1807,3 +1807,7 @@ td.LEMerror  {
     background-color:#fff !important;
     color:#000 !important;
 }
+
+#cquestions optgroup{
+    font-weight:bold;
+}
